--- a/css/transitions.css
+++ b/css/transitions.css
@@ -72,3 +72,12 @@
   transition-delay: 0.2s;
   transform: translateY(40px);
 }
+
+#ex08 article {
+  transition-property: box-shadow;
+  transition-duration: 0.5s;
+}
+
+#ex08 article:hover {
+  box-shadow: 4px 4px 17px 11px rgba(0, 0, 0, 0.75);
+}
